--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "PORT=3001 node ./bin/www"
   },
   "dependencies": {
+    "chai": "^4.3.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "ipfs-http-client": "^49.0.4",
     "jade": "~1.11.0",
+    "mocha": "^8.3.2",
     "morgan": "~1.9.1"
   }
 }
