--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "jade": "^1.11.0",
     "mocha": "^8.3.2",
     "morgan": "^1.10.0",
+    "mysql2": "^2.2.5",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2",
