--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "chai": "^4.3.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "ethereumjs-tx": "^1.3.7",
     "express": "^4.17.1",
