--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-mac": "nodemon ./bin/www",
-    "start-windows": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dev": "nodemon —exec babel-node app.js",
   "author": "",
