--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "@truffle/hdwallet-provider": "^1.2.6",
     "chai": "^4.3.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "ethereumjs-tx": "^1.3.7",
     "express": "^4.17.1",
+    "html-pdf": "^3.0.0",
     "http-errors": "^1.7.2",
     "ipfs-http-client": "^49.0.4",
     "ipfs-mini": "^1.1.5",
