--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "web3": "^1.3.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sequelize-mock": "^0.10.2"
   }
 }
