--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "git.ignoreLimitWarning": true
+    "git.ignoreLimitWarning": true,
+    "editor.detectIndentation": false,
+    "javascript.format.semicolons": "insert",
+    "javascript.preferences.quoteStyle": "double"
 }
